bindings/c/include/wickra_terminal.h

/* wickra-terminal C ABI — generated by cbindgen. Do not edit by hand. */

#ifndef WICKRA_TERMINAL_H
#define WICKRA_TERMINAL_H

#pragma once

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Success.
 */
#define WICKRA_TERMINAL_OK 0

/**
 * A required pointer argument was null.
 */
#define WICKRA_TERMINAL_ERR_NULL -1

/**
 * The operation failed; the error message is written to the out string.
 */
#define WICKRA_TERMINAL_ERR -2

/**
 * An opaque handle to a terminal instance. Created by [`wickra_terminal_new`]
 * and destroyed by [`wickra_terminal_free`]; never dereferenced by the caller.
 */
typedef struct WickraTerminal WickraTerminal;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Construct a terminal from a JSON config string.
 *
 * Returns an opaque handle, or null if `config_json` is null, not valid UTF-8,
 * or not a valid config. Free the handle with [`wickra_terminal_free`].
 *
 * # Safety
 * `config_json` must be null or a valid NUL-terminated C string.
 */
WickraTerminal *wickra_terminal_new(const char *config_json);

/**
 * Destroy a terminal handle. Null is a no-op.
 *
 * # Safety
 * `handle` must be null or a handle previously returned by
 * [`wickra_terminal_new`] and not already freed.
 */
void wickra_terminal_free(WickraTerminal *handle);

/**
 * Apply a command JSON and write the resulting frame JSON to `*out_json`.
 *
 * On success returns [`WICKRA_TERMINAL_OK`] and `*out_json` points to a
 * NUL-terminated frame JSON. On failure returns [`WICKRA_TERMINAL_ERR`] with
 * the error message in `*out_json`, or [`WICKRA_TERMINAL_ERR_NULL`] if a
 * required pointer is null. The caller frees `*out_json` with
 * [`wickra_terminal_free_string`].
 *
 * # Safety
 * `handle` must be a valid handle; `cmd_json` a valid C string; `out_json` a
 * valid pointer to write the result pointer into.
 */
int wickra_terminal_command(WickraTerminal *handle, const char *cmd_json, char **out_json);

/**
 * Free a string previously returned in `*out_json` by
 * [`wickra_terminal_command`]. Null is a no-op.
 *
 * # Safety
 * `s` must be null or a pointer returned by this library and not already freed.
 */
void wickra_terminal_free_string(char *s);

/**
 * The library version as a static NUL-terminated string (do not free).
 */
const char *wickra_terminal_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* WICKRA_TERMINAL_H */